--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul> <!-- Unordered list for displaying information that has no order-->
             <li><a href="http://www.youtube.com">Blue</a></li> <!-- Creates Links in the list-->
         </ul>
-        <ol> <!-- Ordered LIst for displaying information that has order-->
+        <ol> <!-- Ordered List for displaying information that has order-->
             <li>Red</li> <!-- list item -->
             <li>Green</li>
         </ol>
